--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Tahseen Haider</span></p>
                 <p><strong>Profile: </strong> <span>full stack developer</span></p>
-                <p><strong>Email: </strong> <span>contact@example.com</span></p>
-                <p><strong>Phone: </strong> <span>(617) 557-0089</span></p>
+                <p><strong>Email: </strong> <span>tahsin3194@gmail.com</span></p>
+                <p><strong>Phone: </strong> <span>+92 302 0620626 </span></p>
               </div>
             </div>
 
